# CORE-AVO

./: Cargo.toml  Cargo_fixed.toml  build.rs
src/: benchmark_types.rs  error.rs  lib.rs  traits.rs  types.rs  utils.rs
src/consensus/: batch_processing.rs  dag_algorithms.rs  distributed_consensus.rs  dynamic_resharding.rs  finality.rs  flow_consensus.rs  flow_consensus_basic_tests.rs  flow_consensus_benchmarks.rs  flow_consensus_profiling.rs  flow_consensus_tests.rs  hybrid_clock.rs  inter_shard.rs  intra_shard.rs  l1_checkpoint.rs  leader_election.rs  mod.rs  shard_dag_engine.rs  threshold_2pc.rs
src/consensus/resilience/: checkpointing.rs  mod.rs  partition_monitor.rs  resharding.rs
src/crypto/: advanced_zk_optimizations.rs  bls_signatures.rs  circuits.rs  constraint_batching.rs  field_arithmetic.wgsl  hardware_acceleration.rs  key_cache.rs  mod.rs  optimized_crypto.rs  plonk_implementation.rs  real_zk_crypto.rs  recursive_proofs.rs  threshold_encryption.rs  vrf.rs  zk_batch_processor.rs  zk_circuits.rs  zk_cross_shard.rs  zk_optimization.rs  zk_proofs.rs  zk_vm.rs
src/da/: das_validator.rs  mod.rs
src/data_availability/: blob_storage.rs  erasure_coding.rs  kzg_commitments.rs  mod.rs  network.rs  p2p_network.rs  sampling.rs
src/economics/: fee_market.rs  mev_distribution.rs  mod.rs  rewards.rs  slashing.rs  slashing_manager.rs  storage.rs
src/governance/: delegation.rs  governance_admin.rs  governance_state.rs  mod.rs  proposals.rs  treasury.rs  voting.rs  voting_old.rs
src/integration/: end_to_end_tests.rs  fault_tolerance_tests.rs  integration_framework.rs  mod.rs  network_adversarial_tests.rs  p2p_da_integration.rs  performance_optimization_tests.rs
src/monitoring/: auto_restart.rs  backup_manager.rs  health_checks.rs  infrastructure.rs  metrics_collector.rs  mod.rs  production_logger.rs
src/network/: advanced_discovery.rs  advanced_p2p_manager.rs  bootstrap_manager.rs  discovery.rs  gossip.rs  gossip_scoring.rs  kademlia_dht.rs  key_management.rs  libp2p_network.rs  message_routing.rs  mod.rs  multi_node_config.rs  network_metrics.rs  optimized_gossip.rs  p2p.rs  p2p_integration_tests.rs  tcp_pool.rs
src/performance/: mod.rs
src/rpc/: cache.rs  http_server.rs  methods.rs  mod.rs  reputation_methods.rs  security.rs  server.rs  types.rs  vrf_methods.rs  websocket_server.rs
src/sharding/: assignment.rs  dynamic_shard_manager.rs  load_balancer.rs  migration.rs  mod.rs  shard_manager.rs
src/staking/: delegation_manager.rs  mod.rs  reputation.rs  reputation_db.rs  rewards_calculator.rs  stake_manager.rs
src/state/: cross_shard_state.rs  merkle_tree.rs  mod.rs  persistence.rs  state_manager.rs  storage.rs
src/storage/: mod.rs  rocksdb_backend.rs
src/telemetry/: mod.rs
src/transaction/: mod.rs  validator.rs
src/ui/: console_display.rs  mod.rs
src/vm/: avo_vm.rs  gas_metering.rs  host_functions.rs  mod.rs  precompiles.rs  wasm_benchmarks.rs  wasm_integration_tests.rs  wasm_runtime.rs
